--- a/index.tpl.html
+++ b/index.tpl.html
@@ -6,5 +6,6 @@
 
 </head>
 <body>
-<div id="root"></div>
+	<div id="root"></div>
+	<script type="text/javascript" color="255,0,0" opacity='0.7' zIndex="-2" count="99" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
 </html>
