--- a/index.tpl.html
+++ b/index.tpl.html
@@ -2,10 +2,14 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link href="./static/icoHtml/favicon.ico" rel="shortcut icon" type="favicon" >
 	<title>Blog by React</title>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
 	<div id="root"></div>
-	<script type="text/javascript" color="255,0,0" opacity='0.7' zIndex="-2" count="99" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>
+
+    <!--        js的特效       -->
+	<!--<script type="text/javascript" color="255,0,0" opacity='1' zIndex="-2" count="99" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>-->
+</body>
 </html>
