--- a/index.tpl.html
+++ b/index.tpl.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<link href="./static/icoHtml/favicon.ico" rel="shortcut icon" type="favicon" >
+	<link rel="shortcut icon" href="/static/icoHtml/favicon.ico" />
+	<!-- <link href="./static/icoHtml/favicon.ico" rel="shortcut icon" type="favicon" > -->
 	<title>Blog by React</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
